# toknix

./: .gitignore  README.md  pyproject.toml  train.py
examples/: README.md  example_corpus.tokens.pkl  example_corpus.txt  example_merges.pkl  example_vocab.pkl  parallel_file_tokenize.py  train_and_tokenize.py
tests/: test_bpe.py  test_bpe_from_file.py  test_tokenizer.py  test_tokenizer_from_file.py  test_tokenizer_perf.py
toknix/: README.md  __init__.py  bpe.py  chunked_encode.py  cli.py  tokenizer.py
toknix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
