[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toknix"
version = "0.1.0"
description = "A general-purpose, open-source tokenizer library."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "psutil",
    "regex",
    "tqdm"
]

[project.scripts]
toknix = "toknix.cli:main"
